syntax = "proto3";

enum OperateType {
  EnterRoom = 0; // x, y, z, r, g, b
  Keyboard = 1; // keycodes
}

message PlayerOperate {
  int32 uid = 1;
  OperateType type = 2;
  repeated int32 data = 3;
}

message Frame {
  int32 frame_id = 1;
  repeated PlayerOperate operates = 2;
}

message GameReplay {
  repeated Frame frames = 1;
}